k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev-webportal
  labels:
    app: rownak-webportal
