k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rownak-webportal
  namespace: rownak-webportal
  labels:
    app: rownak-webportal
spec:
  selector:
    app: rownak-webportal
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP    # Ingress handles external traffic
